--- a/package.json
+++ b/package.json
@@ -24,17 +24,25 @@
   "homepage": "https://github.com/PrasadLalu/web-admin-typescript#readme",
   "dependencies": {
     "@prisma/client": "6.6.0",
+    "cors": "2.8.5",
     "dotenv": "16.5.0",
+    "ejs": "3.1.10",
     "express": "5.1.0",
+    "helmet": "8.1.0",
     "http-status-codes": "2.3.0",
     "module-alias": "2.2.3",
+    "morgan": "1.10.0",
     "winston": "3.17.0",
     "winston-daily-rotate-file": "5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "9.25.0",
+    "@types/cors": "2.8.17",
+    "@types/ejs": "3.1.5",
     "@types/express": "5.0.1",
+    "@types/helmet": "0.0.48",
     "@types/module-alias": "2.0.4",
+    "@types/morgan": "1.9.9",
     "@types/node": "22.14.1",
     "@typescript-eslint/eslint-plugin": "8.30.1",
     "@typescript-eslint/parser": "8.30.1",
