--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "5.1.0",
     "helmet": "8.1.0",
     "http-status-codes": "2.3.0",
+    "joi": "^17.13.3",
     "jsonwebtoken": "9.0.2",
     "lodash": "4.17.21",
     "module-alias": "2.2.3",
@@ -45,6 +46,7 @@
     "@types/ejs": "3.1.5",
     "@types/express": "5.0.1",
     "@types/helmet": "0.0.48",
+    "@types/joi": "^17.2.2",
     "@types/jsonwebtoken": "9.0.9",
     "@types/lodash": "4.17.16",
     "@types/module-alias": "2.0.4",
