--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
         "baseUrl": "./",
         "paths": {
             "@utils": [
-                "src/utils/*"
+                "src/utils/index.ts"
             ],
             "@services": [
                 "src/services/index.ts"
@@ -23,10 +23,13 @@
                 "src/schemas/index.ts"
             ],
             "@logger": [
-                "src/utils/logger.ts"
+                "src/shared/logger.ts"
             ],
-            "@constant": [
-                "src/utils/constant.ts"
+            "@constants": [
+                "src/shared/index.ts"
+            ],
+            "@errorHelper": [
+                "src/shared/index.ts"
             ],
             "@controllers": [
                 "src/controllers/index.ts"
@@ -35,7 +38,7 @@
                 "src/middlewares/index.ts"
             ],
             "@statusCode": [
-                "src/utils/statusCode.ts"
+                "src/shared/status-code.ts"
             ],
         },
     },
