--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@types/ejs": "3.1.5",
     "@types/express": "5.0.1",
     "@types/helmet": "0.0.48",
-    "@types/joi": "^17.2.2",
+    "@types/joi": "17.2.2",
     "@types/jsonwebtoken": "9.0.9",
     "@types/lodash": "4.17.16",
     "@types/module-alias": "2.0.4",
@@ -66,8 +66,10 @@
   "_moduleAliases": {
     "@root": ".",
     "@utils": "dist/utils",
+    "@types": "dist/types",
     "@schemas": "dist/schemas",
     "@services": "dist/services",
+    "@enums": "dist/shared/enums",
     "@logger": "dist/shared/logger",
     "@controllers": "dist/controllers",
     "@middlewares": "dist/middlewares",
