--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,9 @@
             "@utils": [
                 "src/utils/index.ts"
             ],
+            "@types": [
+                "src/types/index.d.ts"
+            ],
             "@services": [
                 "src/services/index.ts"
             ],
@@ -30,6 +33,9 @@
             ],
             "@errorHelper": [
                 "src/shared/index.ts"
+            ],
+            "@enums": [
+                "src/shared/enums/index.ts"
             ],
             "@controllers": [
                 "src/controllers/index.ts"
@@ -47,5 +53,5 @@
     ],
     "exclude": [
         "node_modules"
-    ]
+    ],
 }
